# real_algebra

./: .gitignore  CMakeLists.txt
include/ralg/: algebraic_number.h  algorithm.h  cad.h  groebner.h  matrix.h  polynomial.h  projection.h  rational.h  root_counting.h
src/: algebraic_number.cpp  cad.cpp  cad.h  groebner.cpp  groebner.h  matrix.cpp  matrix.h  polynomial.cpp  polynomial.h  projection.cpp  projection.h  rational.cpp  rational.h  root_counting.cpp  root_counting.h
test/: algebraic_number_tests.cpp  arithmetic_tests.cpp  cad_tests.cpp  division_tests.cpp  groebner_tests.cpp  matrix_tests.cpp  partial_evaluation_tests.cpp  projection_tests.cpp  root_isolation_tests.cpp
